--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -149,7 +149,7 @@ spec:
         livenessProbe:
           failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
           httpGet:
-            {{- if .Values.kubeRBACProxy.enabled }}
+            {{- if .Values.hostNetwork }}
             host: 127.0.0.1
             {{- end }}
             httpHeaders:
@@ -167,7 +167,7 @@ spec:
         readinessProbe:
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
           httpGet:
-            {{- if .Values.kubeRBACProxy.enabled }}
+            {{- if .Values.hostNetwork }}
             host: 127.0.0.1
             {{- end }}
             httpHeaders:
