--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2195,7 +2195,7 @@ prometheusOperator:
       ##
       replicas: 1
 
-      ## Stragety of the deployment
+      ## Strategy of the deployment
       ##
       strategy: {}
 
