--- a/charts/prometheus-blackbox-exporter/templates/poddisruptionbudget.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/poddisruptionbudget.yaml
@@ -1,9 +1,5 @@
 {{- if .Values.podDisruptionBudget -}}
-{{ if $.Capabilities.APIVersions.Has "policy/v1/PodDisruptionBudget" -}}
-apiVersion: policy/v1
-{{- else -}}
-apiVersion: policy/v1beta1
-{{- end }}
+apiVersion: {{ template "prometheus-blackbox-exporter.policy.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "prometheus-blackbox-exporter.fullname" . }}
