[kube-state-metrics] fix: Default kube-state-metrics resources to empty Signed-off-by: smcavallo <smcavallo@hotmail.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -182,10 +182,8 @@ spec:
           periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
           successThreshold: {{ .Values.readinessProbe.successThreshold }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
-        {{- if .Values.resources }}
         resources:
-{{ toYaml .Values.resources | indent 10 }}
-{{- end }}
+          {{- toYaml .Values.resources | nindent 10 }}
 {{- if .Values.containerSecurityContext }}
         securityContext:
 {{ toYaml .Values.containerSecurityContext | indent 10 }}
