no nindent Signed-off-by: smcavallo <smcavallo@hotmail.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -183,7 +183,7 @@ spec:
           successThreshold: {{ .Values.readinessProbe.successThreshold }}
           timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
         resources:
-          {{- toYaml .Values.resources | nindent 10 }}
+{{ toYaml .Values.resources | indent 10 }}
 {{- if .Values.containerSecurityContext }}
         securityContext:
 {{ toYaml .Values.containerSecurityContext | indent 10 }}
