--- a/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
+++ b/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
@@ -49,30 +49,33 @@ spec:
                name: {{ .Values.rabbitmq.configMapOverrideReference }}
           {{- end }}
           env:
-           {{- if .Values.rabbitmq.existingPasswordSecret }}
-              - name: RABBIT_PASSWORD
-                valueFrom:
-                  secretKeyRef:
-                    name: "{{ .Values.rabbitmq.existingPasswordSecret }}"
-                    key: "{{ .Values.rabbitmq.existingPasswordSecretKey }}"
-           {{- else if .Values.rabbitmq.password  }}
-              - name: RABBIT_PASSWORD
-                value: {{ .Values.rabbitmq.password }}
-           {{- end }}
-           {{- if .Values.rabbitmq.existingUserSecret }}
-              - name: RABBIT_USER
-                valueFrom:
-                  secretKeyRef:
-                    name: "{{ .Values.rabbitmq.existingUserSecret }}"
-                    key: "{{ .Values.rabbitmq.existingUserSecretKey }}"
-           {{- else if .Values.rabbitmq.user }}
-              - name: RABBIT_USER
-                value: {{ .Values.rabbitmq.user }}
-           {{- end }}
-           {{- if .Values.rabbitmq.url }}
-              - name: RABBIT_URL
-                value: {{ .Values.rabbitmq.url }}
-           {{- end }}
+            {{- if .Values.rabbitmq.existingPasswordSecret }}
+            - name: RABBIT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.rabbitmq.existingPasswordSecret }}"
+                  key: "{{ .Values.rabbitmq.existingPasswordSecretKey }}"
+            {{- else if .Values.rabbitmq.password  }}
+            - name: RABBIT_PASSWORD
+              value: {{ .Values.rabbitmq.password }}
+            {{- end }}
+            {{- if .Values.rabbitmq.existingUserSecret }}
+            - name: RABBIT_USER
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.rabbitmq.existingUserSecret }}"
+                  key: "{{ .Values.rabbitmq.existingUserSecretKey }}"
+            {{- else if .Values.rabbitmq.user }}
+            - name: RABBIT_USER
+              value: {{ .Values.rabbitmq.user }}
+            {{- end }}
+            {{- if .Values.rabbitmq.url }}
+            - name: RABBIT_URL
+              value: {{ .Values.rabbitmq.url }}
+            {{- end }}
+            {{- if .Values.env }}
+            {{- toYaml .Values.env | nindent 12 }}
+            {{- end }}
           ports:
             - containerPort: {{ .Values.service.internalPort }}
               name: publish
