--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -112,8 +112,10 @@ service:
   type: ClusterIP
   port: 9093
   clusterPort: 9094
-  loadBalancerIP: "" # Assign ext IP when Service type is LoadBalancer
-  loadBalancerSourceRanges: [] # Only allow access to loadBalancerIP from these IPs
+  # Assign ext IP when Service type is LoadBalancer
+  loadBalancerIP: ""
+  # Only allow access to loadBalancerIP from these IPs
+  loadBalancerSourceRanges: []
   # if you want to force a specific nodePort. Must be use with service.type=NodePort
   # nodePort:
 
