feat: add support for dual stack clusters to grafana
Signed-off-by: Ludovic Ortega <ludovic.ortega@adminafk.fr>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1130,6 +1130,8 @@ grafana:
   ##
   service:
     portName: http-web
+    ipFamilies: ["IPv6", "IPv4"]
+    ipFamilyPolicy: "PreferDualStack"
 
   serviceMonitor:
     # If true, a ServiceMonitor CRD is created for a prometheus operator
