--- a/charts/kube-prometheus-stack/ci/05-ingress-and-gateway-routes-values.yaml
+++ b/charts/kube-prometheus-stack/ci/05-ingress-and-gateway-routes-values.yaml
@@ -2,16 +2,35 @@ alertmanager:
   ingress:
     enabled: true
     hosts:
-      - "*.test.com"
+      - "*.example.com"
 
 
 prometheus:
   ingress:
     enabled: true
     hosts:
-      - "*.test.com"
+      - "*.example.com"
   route:
     main:
       enabled: true
       hostnames:
-        - "*.test.com"
+        - "*.example.com"
+      filters:
+        - type: RequestHeaderModifier
+          requestHeaderModifier:
+            set:
+              - name: my-header-name
+                value: my-new-header-value
+      additionalRules:
+        - hostnames:
+            - "foo.example.com"
+          filters:
+            - type: RequestHeaderModifier
+              requestHeaderModifier:
+                set:
+                  - name: my-header-name
+                    value: my-new-header-value
+          matches:
+            - path:
+                type: PathPrefix
+                value: /foo/
