targetLabels support for kubelet and node-exporter
Signed-off-by: kranthikirang <kranthi.guttikonda9@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1464,6 +1464,11 @@ kubelet:
     additionalLabels: {}
     #  foo: bar
 
+    ## serviceMonitor targetLabels
+    ## https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#servicemonitor
+    targetLabels: []
+    # - cluster
+
 ## Component scraping the kube controller manager
 ##
 kubeControllerManager:
@@ -2700,6 +2705,8 @@ prometheusOperator:
     selector: ""
     ## Use '{{ template "kube-prometheus-stack.fullname" . }}-kubelet' by default
     name: ""
+    ### Pass additional labels for kubelet resources to convert to targetLabels using servicemonitor with format as key=val
+    labels: ""
 
   ## Create Endpoints objects for kubelet targets.
   kubeletEndpointsEnabled: true
