targetLabels support for node-exporter
Signed-off-by: kranthikirang <kranthi.guttikonda9@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -182,6 +182,10 @@ prometheus:
     # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#servicemonitor
     podTargetLabels: []
 
+    # List of target labels to add to node exporter metrics
+    # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#servicemonitor
+    targetLabels: []
+
     scheme: http
     basicAuth: {}
     bearerTokenFile:
