--- a/charts/kube-prometheus-stack/templates/alertmanager/route.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/route.yaml
@@ -12,7 +12,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   name: {{ $serviceName }}{{ if ne $name "main" }}-{{ $name }}{{ end }}
-  namespace: {{ template "kube-alertmanager-stack.namespace" $ }}
+  namespace: {{ template "kube-prometheus-stack.namespace" $ }}
   labels:
     app: {{ template "kube-prometheus-stack.name" $ }}-alertmanager
     {{- include "kube-prometheus-stack.labels" $ | nindent 4 }}
