--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2773,6 +2773,11 @@ prometheusOperator:
   kubeletEndpointsEnabled: true
   ## Create EndpointSlice objects for kubelet targets.
   kubeletEndpointSliceEnabled: false
+  
+  ## Extra arguments to pass to prometheusOperator
+  # https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/operator.md
+  extraArgs: []
+  #  - --labels="cluster=talos-cluster"
 
   ## Create a servicemonitor for the operator
   ##
