ci values for extraArgs
Signed-off-by: kranthikirang <kranthi.guttikonda9@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/deployment.yaml
@@ -143,10 +143,8 @@ spec:
             - --web.key-file=/cert/{{ if .Values.prometheusOperator.admissionWebhooks.certManager.enabled }}tls.key{{ else }}key{{ end }}
             - --web.listen-address=:{{ .Values.prometheusOperator.tls.internalPort }}
             - --web.tls-min-version={{ .Values.prometheusOperator.tls.tlsMinVersion }}
-            {{- if .Values.prometheusOperator.extraArgs }}
-            {{- range .Values.prometheusOperator.extraArgs }}
-            - {{ . }}
-            {{- end }}
+            {{- with.Values.prometheusOperator.extraArgs }}
+            {{- tpl (toYaml .) $ | nindent 12 }}
             {{- end }}
           ports:
             - containerPort: {{ .Values.prometheusOperator.tls.internalPort }}
