[kube-prometheus-stack] Fix Helm template error by using hasKey to check scrapeConfigNamespaceSelector presence
Signed-off-by: Philipp Traber <philipp.traber@uni-konstanz.de>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -259,7 +259,7 @@ spec:
 {{- if .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector }}
   scrapeConfigNamespaceSelector:
 {{ tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector | indent 4) . }}
-{{ else if ne .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector nil }}
+{{ else if hasKey .Values.prometheus.prometheusSpec "scrapeConfigNamespaceSelector" }}
   scrapeConfigNamespaceSelector: {}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.storageSpec }}
