[kube-prometheus-stack] hasKey instead of ne nil
Signed-off-by: Philipp Traber <philipp.traber@uni-konstanz.de>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -253,7 +253,7 @@ spec:
   scrapeConfigSelector:
     matchLabels:
       release: {{ $.Release.Name | quote }}
-{{ else if ne .Values.prometheus.prometheusSpec.scrapeConfigSelector nil }}
+{{ else if hasKey .Values.prometheus.prometheusSpec "scrapeConfigSelector" }}
   scrapeConfigSelector: {}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector }}
