fix readiness probe
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -200,7 +200,7 @@ spec:
               value: {{ $header.value }}
             {{- end }}
             path: /readyz
-            port: {{ $servicePort }}
+            port: {{ $telemetryPort }}
             scheme: {{ upper .Values.readinessProbe.httpGet.scheme }}
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
           periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
